Missing update of collection visibilty settings when creating new ViewLayer #62320

Closed
opened 2019-03-07 16:28:46 +01:00 by Sebastian Koenig · 5 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: 2.80, ed24315c63

Short description of error
When you create a new viewlayer and try to disable a collection from the viewport (alt-click on eye-icon), it only works in the current viewlayer. After saving the blendfile and re-opening it works as expected. Maybe some missing update flag or so?

Exact steps for others to reproduce the error
Since saving the blendfile forces all the flags, updates etc. and fixes the error I can't upload a sample file.
But if you follow these steps you should be able to reproduce the issue in factory startup:

  1. create a new Viewlayer ('View Layer.001")
  2. Alt-Click on "Collection" eye-icon (-> everything inside Collection is hidden)
  3. Switch back to "View Layer"
  • Everything is visible, even though it shouldnt be. Also, note how the text in the outliner is not greyed out.

**System Information** Operating system: Graphics card: **Blender Version** Broken: 2.80, ed24315c6309 **Short description of error** When you create a new viewlayer and try to disable a collection from the viewport (alt-click on eye-icon), it only works in the current viewlayer. After saving the blendfile and re-opening it works as expected. Maybe some missing update flag or so? **Exact steps for others to reproduce the error** Since saving the blendfile forces all the flags, updates etc. and fixes the error I can't upload a sample file. But if you follow these steps you should be able to reproduce the issue in factory startup: 1. create a new Viewlayer ('View Layer.001") 2. Alt-Click on "Collection" eye-icon (-> everything inside Collection is hidden) 3. Switch back to "View Layer" - > Everything is visible, even though it shouldnt be. Also, note how the text in the outliner is not greyed out.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Added subscribers: @Sergey, @dfelinto

Added subscribers: @Sergey, @dfelinto
Dalai Felinto self-assigned this 2019-03-07 16:50:38 +01:00

Confirmed indeed, I will look at this later.
It is probably either missing to tag the non-active viewlayer depsgraph for update, or said depsgraph is not updating upon active view layer change.

Confirmed indeed, I will look at this later. It is probably either missing to tag the non-active viewlayer depsgraph for update, or said depsgraph is not updating upon active view layer change.

This issue was referenced by fcffbe1d1b

This issue was referenced by fcffbe1d1b31ed518b7a710c09d5fda389d8182e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62320
No description provided.