Fix T62320: Outliner collection disable not propagating to other view layers

The moment you switched to another view layer the visibility was still
outdated.